# contest-bot

./: .dockerignore  .env.template  .gitattributes  .gitignore  Dockerfile  Pipfile  Procfile  README.md  checks.py  data_clean.py  database.db  database.py  druid_ppe_data.csv  edit_character.py  emojis.py  leaderboard.py  main.py  meta.py  new_character.py  objects.py  points.py  ppe_data.csv  pyproject.toml  requirements.txt  roles.json  roles.py  settings.dev.json  settings.json  settings.prod.json  settings.py  tasks.py  util.py
cogs/: __init__.py  contest_management.py  leaderboard_management.py  scheduling.py  user_management.py
data/: emojis.json  meta.json
database/: __init__.py  db.py  objects.py
processes/: __init__.py  add_remove_keywords.py  edit_character.py  new_character.py  process.py  process_manager.py
server/: .env.template  .eslintrc.cjs  .prettierrc  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.ts  client.ts  constants.ts  env.ts  index.ts  pointsManager.ts  prisma.ts  settings.ts  text.ts  types.d.ts  util.ts
server/src/commands/: load-commands.ts  reload-commands.ts  (+1 more)
source/: cache.py  constants.py  database.py  edit_character.py  edit_submission.py  leaderboard.py  main.py  new_character.py  new_submission.py  payloads.py  points_data.py  remove_keywords.py  submission.py  util.py
source/cogs/: contest_control.py
source/command_groups/: contest.py  schedule.py
source/database/: database.py  db_objects.py
source/util/: checks.py
util/: __init__.py  checks.py  embeds.py  logger.py  tasks.py
(+47 files in other folders)
